--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
   <link rel="stylesheet" href="digital-dash.css">
   <title>ari sawyers</title>
 </head>
