updated email address :fire:

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="http://dribbble.com/ari" target="#">design</a></li>
         <li><a href="http://instagram.com/arisawyers" target="#">photos</a></li>
         <li><a href="http://twitter.com/arisawyers" target="#">twitter</a></li>
-        <li><a href="mailto:arisawyers@gmail.com" target="#">email</a></li>
+        <li><a href="mailto:hi@arisawyers.co" target="#">email</a></li>
    </ul>
 
   </section>
