updated title :fire:

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
         <h1>ari sawyers</h1>
-        <h2>is working on microsoft outlook</h2>
+        <h2>product designer</h2>
 
     <ul>
         <li><a href="http://dribbble.com/ari" target="#">design</a></li>
