--- a/index.html
+++ b/index.html
@@ -3,28 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
   <link rel="shortcut icon" href="favicon.png">
   <link rel="stylesheet" href="digital-dash.css">
-  <title>ari sawyers</title>
+  <title>Ari Sawyers</title>
 </head>
 
 <body>
-        <h1>ari sawyers</h1>
-        <h2>product designer</h2>
-
-    <ul>
-        <li><a href="http://dribbble.com/ari" target="#">design</a></li>
-        <li><a href="http://instagram.com/arisawyers" target="#">photos</a></li>
-        <li><a href="http://twitter.com/arisawyers" target="#">twitter</a></li>
-        <li><a href="http://m.me/arisawyers" target="#">message</a></li>
-   </ul>
-
-  </section>
+        <h1>Ari Sawyers</h1>
+        <h2>A decade focused on product, design, and research. Currently building something new between London, New York, and San Francisco.</h2>
+        <a href="http://t.me/arisawyers" target="#">get in touch</a>
 
 </body>
 
 </html>
+
+
+
+<!-- 
+
+
+ ________  ________  ________  ___    ___ ________  ___  ________  ___  ___  _________         _______  ________    _______  ________          ________  ________  ___  _______   ___               ________  ________  ___       __       ___    ___ _______   ________  ________      
+|\   ____\|\   __  \|\   __  \|\  \  /  /|\   __  \|\  \|\   ____\|\  \|\  \|\___   ___\      /  ___  \|\   __  \  /  ___  \|\   __  \        |\   __  \|\   __  \|\  \|\  ___ \ |\  \             |\   ____\|\   __  \|\  \     |\  \    |\  \  /  /|\  ___ \ |\   __  \|\   ____\     
+\ \  \___|\ \  \|\  \ \  \|\  \ \  \/  / | \  \|\  \ \  \ \  \___|\ \  \\\  \|___ \  \_|     /__/|_/  /\ \  \|\  \/__/|_/  /\ \  \|\  \       \ \  \|\  \ \  \|\  \ \  \ \   __/|\ \  \            \ \  \___|\ \  \|\  \ \  \    \ \  \   \ \  \/  / | \   __/|\ \  \|\  \ \  \___|_    
+ \ \  \    \ \  \\\  \ \   ____\ \    / / \ \   _  _\ \  \ \  \  __\ \   __  \   \ \  \      |__|//  / /\ \  \\\  \__|//  / /\ \  \\\  \       \ \   __  \ \   _  _\ \  \ \  \_|/_\ \  \            \ \_____  \ \   __  \ \  \  __\ \  \   \ \    / / \ \  \_|/_\ \   _  _\ \_____  \   
+  \ \  \____\ \  \\\  \ \  \___|\/  /  /   \ \  \\  \\ \  \ \  \|\  \ \  \ \  \   \ \  \         /  /_/__\ \  \\\  \  /  /_/__\ \  \\\  \       \ \  \ \  \ \  \\  \\ \  \ \  \_|\ \ \  \____        \|____|\  \ \  \ \  \ \  \|\__\_\  \   \/  /  /   \ \  \_|\ \ \  \\  \\|____|\  \  
+   \ \_______\ \_______\ \__\ __/  / /      \ \__\\ _\\ \__\ \_______\ \__\ \__\   \ \__\       |\________\ \_______\|\________\ \_______\       \ \__\ \__\ \__\\ _\\ \__\ \_______\ \_______\        ____\_\  \ \__\ \__\ \____________\__/  / /      \ \_______\ \__\\ _\ ____\_\  \ 
+    \|_______|\|_______|\|__||\___/ /        \|__|\|__|\|__|\|_______|\|__|\|__|    \|__|        \|_______|\|_______| \|_______|\|_______|        \|__|\|__|\|__|\|__|\|__|\|_______|\|_______|       |\_________\|__|\|__|\|____________|\___/ /        \|_______|\|__|\|__|\_________\
+                             \|___|/                                                                                                                                                                  \|_________|                       \|___|/                            \|_________|
+                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                        
+
+ -->
 
