--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <h1>Ari Sawyers</h1>
         <h2>A decade focused on product, design, and research. Currently building something new between London, New York, and San Francisco.</h2>
-        <a href="http://t.me/arisawyers" target="#">get in touch</a>
+        <a href="http://t.me/arisawyers" target="#">Message</a>
 
 </body>
 
