--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
         <h1>Ari Sawyers</h1>
-        <h2>A decade focused on product, design, and research. Currently building something new between London, New York, and San Francisco.</h2>
+        <h2>A decade focused on product, design, and research. Currently building something new between London, New York, and San&nbsp;Francisco.</h2>
         <a href="http://t.me/arisawyers" target="#">Message</a>
 
 </body>
